--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "start": "nuxt start",
+    "postinstall": "chmod +x node_modules/.bin/nuxt && nuxt prepare"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
