--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
+
   "installCommand": "npm install",
-  "outputDirectory": ".output"
+  "outputDirectory": ".output",
+  "buildCommand": "pnpm install && nuxt prepare && pnpm build"
 }
