--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nuxt dev",
-    "build": "nuxt build",
+    "dev": "npm run dev",
+    "build": "npm run build",
     "generate": "nuxt generate",
-    "start": "nuxt start",
+    "start": "npm run dev",
     "postinstall": "chmod +x node_modules/.bin/nuxt && nuxt prepare"
   },
   "dependencies": {
