--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "npm run dev",
-    "build": "npm run build",
+    "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
-    "start": "npm run dev",
-    "postinstall": "chmod +x node_modules/.bin/nuxt && nuxt prepare"
+    "start": "nuxt start",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
